--- a/ChatInterface/Info.plist
+++ b/ChatInterface/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>ChatApp would like to access your camera</string>
 </dict>
 </plist>
